--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.0"
+    "mongoose": "^8.16.0",
+    "nanoid": "^5.1.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
